# moktalk-backend

./: .gitignore  railway.json  requirements.txt
agent/: .dockerignore  Procfile  QUICKSTART.md  README.md  agent_service.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start-agent.sh
